# CareGenix

./: README.md  Readme1.md  description.md  ideas.md  ideas_gemini.md
cli/agents/diagnostic_assistant_agent/: diagnostic_assistant_agent.py  pyproject.toml
cli/agents/medical_records_agent/: medical_records_agent.py  pyproject.toml
cli/agents/patient_communication_agent/: patient_communication_agent.py
cli/agents/patient_intake_agent/: patient_intake_agent.py
cli/agents/treatment_plan_agent/: treatment_plan_agent.py
