[project]
name = "diagnostic-assistant-agent"
version = "0.1.0"
description = "Enhanced diagnostic assistant with DeepSeek AI integration"
requires-python = ">=3.12"
dependencies = [
    "genai-protocol",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"